New Timer class.  Now requires Java 17+.